[package]
name = "ru-webrtc-signaler"
version = "0.0.1"
authors = ["Phylliida Dev <phylliidadev@gmail.com>"]
description = "A rust websocket signaling server, TURN server, and STUN server all packaged together"
homepage = "https://github.com/Phylliida/SignalingServer"
repository = "https://github.com/Phylliida/SignalingServer"
readme = "README.md"
keywords = ["STUN", "TURN", "websocket", "signaling server"]
categories = ["asynchronous", "network-programming"]
license = "MIT"
edition = "2021"

[dependencies]
rcgen = "0.13.1"
rusturn = "0.0.7"
bytecodec = "0.4"
factory = "0.1"
fibers = "0.1"
fibers_timeout_queue = "0.1"
fibers_transport = "0.1.3"
fibers_global = "0.1.2"
futures = "0.1"
log = "0.4"
rand = "0.8"
rustun = "0.5"
stun_codec = "0.3"
trackable = "1"
aws-lc-rs = "1.6.0"
pem = "3.0.2"
pki-types = { package = "rustls-pki-types", version = "1.4.1" }
ring = "0.17"
x509-parser = "0.16"
clap = { version = "4", features = ["derive"] }
ws = { version = "0.9.2", features = ["ssl"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
web-push = "0.10.1"
openssl = "0.10"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.9"
fibers_global = "0.1.2"
