[package]
name = "ru-webrtc-signaler"
version = "0.0.1"
authors = ["Phylliida Dev <phylliidadev@gmail.com>"]
description = "A rust websocket signaling server, forked from https://github.com/Charles-Schleich/WebRTC-in-Rust/tree/master/signalling-server"
homepage = "https://github.com/Phylliida/SignalingServer"
repository = "https://github.com/Phylliida/SignalingServer"
readme = "README.md"
keywords = ["STUN", "TURN", "websocket", "signaling server"]
categories = ["asynchronous", "network-programming"]
license = "MIT"
edition = "2021"

[dependencies]
async-tungstenite = "0.12.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.62"
simplelog = "0.8.0"
log = "0.4.8"
futures="0.3.12"
async-std="1.9.0"
rand="0.8.3"